test/src/e2e_vm_tests/test_programs/should_pass/language/panic_expression/panic_in_same_functions/src/module.sw
library;

struct S {}

impl S {
    fn function() {
        panic "This is an error message.";
    }
}

fn function() {
    panic "This is an error message.";
}

pub fn module_main() {
    function();
    S::function();
}
